Bug 40923 - Missing #include <limits.h> for PATH_MAX
Summary: Missing #include <limits.h> for PATH_MAX
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: Other FreeBSD
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-15 20:09 UTC by Roman Bogorodskiy
Modified: 2011-09-16 03:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix (741 bytes, patch)
2011-09-15 20:10 UTC, Roman Bogorodskiy
Details | Splinter Review

Description Roman Bogorodskiy 2011-09-15 20:09:32 UTC
modules.c uses PATH_MAX but doesn't include <limits.h>, which causes build failure on FreeBSD. Patch included that fixes the problem.
Comment 1 Roman Bogorodskiy 2011-09-15 20:10:38 UTC
Created attachment 51251 [details] [review]
fix
Comment 2 Stef Walter 2011-09-16 03:51:44 UTC
Thanks! Merged.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.