Add #include <limits.h> for PATH_MAX to fix compilation on FreeBSD.

https://bugs.freedesktop.org/show_bug.cgi?id=40923